--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
@@ -531,7 +531,7 @@
                         </mat-select>
                       </mat-form-field>
                     </div>
-                    <span class="icon-incompleto">
+                    <span class="icon-incompleto ml-1-5em">
                       <img
                         class="icon-incompleto--img"
                         src="assets/img/icon/incompleto.svg"
