--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/btn-registrar/btn-registrar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/btn-registrar/btn-registrar.component.html
@@ -54,6 +54,21 @@
                 "
               />
             </span>
+            <span class="icon-incompleto">
+              <img
+                class="icon-incompleto--img"
+                src="assets/img/icon/incompleto.svg"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                *ngIf="
+                  (regitrarAporteForm.get('tipoAportante').invalid &&
+                    regitrarAporteForm.get('tipoAportante').touched) ||
+                  (regitrarAporteForm.get('tipoAportante').invalid && estaEditando)
+                "
+              />
+            </span>
           </div>
         </div>
       </div>
