--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -354,7 +354,7 @@
                 </mat-card-content>
             </mat-card>
             <div class="col-md-12 text-right">
-                <button mat-button color="warn" type="button" class="btn-eliminar">
+                <button mat-button color="warn" type="button" class="btn-eliminar"  (click)="eliminarCriterio()">
                     <img src="assets/img/icon/menos.svg" alt="Eliminar radicado">
                     Eliminar criterio para descuento
                 </button>
@@ -393,7 +393,7 @@
                 </mat-card-content>
             </mat-card>
             <div class="col-md-12 text-right">
-                <button mat-button color="warn" type="button" class="btn-eliminar">
+                <button mat-button color="warn" type="button" class="btn-eliminar"  (click)="eliminarCriterio()">
                     <img src="assets/img/icon/menos.svg" alt="Eliminar radicado">
                     Eliminar criterio para descuento
                 </button>
