error bloqueante de verificar requisitos

--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/inversion-fljrecursos-verificar-requisitos/inversion-fljrecursos-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/inversion-fljrecursos-verificar-requisitos/inversion-fljrecursos-verificar-requisitos.component.html
@@ -68,7 +68,7 @@
         >
         </quill-editor>
       </div>
-      <span class="contador miles mb-2em" *ngIf="addressForm.value.observaciones !== null">
+      <span class="contador miles" *ngIf="addressForm.value.observaciones !== null">
         {{
           1000 -
             (textoLimpio(addressForm.get('observaciones').value) > 1000
@@ -76,7 +76,7 @@
               : textoLimpio(addressForm.get('observaciones').value))
         }}
       </span>
-      <span class="contador miles mb-2em" *ngIf="addressForm.value.observaciones === null"> 1000 </span>
+      <span class="contador miles" *ngIf="addressForm.value.observaciones === null"> 1000 </span>
       <span class="icon-incompleto">
         <img
           class="icon-incompleto--img"
