--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/planes-programas-verificar-requisitos/planes-programas-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/planes-programas-verificar-requisitos/planes-programas-verificar-requisitos.component.html
@@ -125,7 +125,7 @@
         >
         </quill-editor>
       </div>
-      <span class="contador miles" *ngIf="addressForm.value.observaciones !== null">
+      <span class="contador miles" *ngIf="addressForm.value.observaciones">
         {{
           1000 -
             (textoLimpio(addressForm.get('observaciones').value) > 1000
@@ -133,7 +133,7 @@
               : textoLimpio(addressForm.get('observaciones').value))
         }}
       </span>
-      <span class="contador miles" *ngIf="addressForm.value.observaciones === null"> 1000 </span>
+      <span class="contador miles" *ngIf="!addressForm.value.observaciones"> 1000 </span>
       <span class="icon-incompleto">
         <img
           class="icon-incompleto--img"
