--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -25,14 +25,20 @@
       <ng-container matColumnDef="informeFinalListaChequeoId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
         <td mat-cell *matCellDef="let element">
-          <b>{{ element.posicion }}</b>
+          <span [class.color-secondaryColor]="element.calificacionCodigo === '' && estaEditando">
+            <b>{{ element.posicion }}</b>
+          </span>
         </td>
       </ng-container>
 
       <!-- nombre Column -->
       <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Ítem</th>
-        <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+        <td mat-cell *matCellDef="let element">
+          <span [class.color-secondaryColor]="element.calificacionCodigo === '' && estaEditando">
+            {{ element.nombre }}
+          </span>
+        </td>
       </ng-container>
 
       <!-- calificacionCodigo Column -->
@@ -77,15 +83,20 @@
             type="button"
             (click)="openDialogTipoDocumento(element)"
           >
-            <span *ngIf="element.informeFinalAnexoId == null || element.informeFinalAnexoId == 0"
-              >Tipo de documento</span
+            <span *ngIf="element.informeFinalAnexoId == null || element.informeFinalAnexoId == 0">
+              Tipo de documento
+            </span>
+            <span
+              *ngIf="
+                (element.estadoInformeFinal !== '4' &&
+                  element.informeFinalAnexoId != null &&
+                  element.informeFinalAnexoId > 0) ||
+                (element.estadoInformeFinal === '4' && element.tieneObservacionSupervisor)
+              "
             >
-            <span *ngIf="(element.estadoInformeFinal !== '4' && element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0) || (element.estadoInformeFinal ==='4' && element.tieneObservacionSupervisor)"
-              >Ver detalle/ Editar</span
-            >
-            <span *ngIf="element.estadoInformeFinal ==='4' && !element.tieneObservacionSupervisor"
-              >Ver detalle</span
-            >
+              Ver detalle/ Editar
+            </span>
+            <span *ngIf="element.estadoInformeFinal === '4' && !element.tieneObservacionSupervisor"> Ver detalle </span>
           </button>
           <button
             *ngIf="element.calificacionCodigo === '2' || element.calificacionCodigo === 2"
