--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -8,16 +8,13 @@
   <mat-accordion>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title ngClass="expansion-style--title">
-          Informe final y anexos
-        </mat-panel-title>
+        <mat-panel-title ngClass="expansion-style--title"> Informe final y anexos </mat-panel-title>
       </mat-expansion-panel-header>
       <section class="text-center">
-
         <div class="d-flex align-items-center info-text en-alertaLibre">
           Seleccione si el item Cumple, No cumple o No aplica
         </div>
-        
+
         <div>
           <div class="table-responsive">
             <table mat-table [dataSource]="dataSource" matSort>
@@ -25,56 +22,76 @@
               <ng-container matColumnDef="No">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
                 <td mat-cell *matCellDef="let element">
-                  <b>{{ element.informeFinalListaChequeoId }}</b>
+                  <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                    <b>{{ element.informeFinalListaChequeoId }}</b>
+                  </span>
                 </td>
               </ng-container>
-        
+
               <!-- item Column -->
               <ng-container matColumnDef="item">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Ítem</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.informeFinalListaChequeo.nombre }}
+                  <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                    {{ element.informeFinalListaChequeo.nombre }}
+                  </span>
                 </td>
               </ng-container>
-        
+
               <!-- calificacionInterventoria Column -->
               <ng-container matColumnDef="calificacionCodigoString">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación interventoría</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.calificacionCodigoString }}
+                  <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                    {{ element.calificacionCodigoString }}
+                  </span>
                 </td>
               </ng-container>
-        
+
               <!-- tipoAnexo Column -->
               <ng-container matColumnDef="tipoAnexoString">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
                 <td mat-cell *matCellDef="let element">
                   <div *ngIf="element.calificacionCodigo === '1'">
-                    {{ element.informeFinalAnexo.tipoAnexoString }}
+                    <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                      {{ element.informeFinalAnexo.tipoAnexoString }}
+                    </span>
                   </div>
                 </td>
               </ng-container>
-        
+
               <!-- Ubicacion Column -->
               <ng-container matColumnDef="Ubicacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación (url/radicado)</th>
                 <td mat-cell *matCellDef="let element">
-                  <div *ngIf="element.calificacionCodigo === '1'">
+                  <div
+                    *ngIf="element.calificacionCodigo === '1'"
+                    [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando"
+                  >
                     <!--Físico-->
-                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">{{ element.informeFinalAnexo.numRadicadoSac }} / {{ element.informeFinalAnexo.fechaRadicado | date:'dd/MM/yyyy'}} </span>
+                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">
+                      <b>SAC:</b>
+                      {{ element.informeFinalAnexo.numRadicadoSac }} <br />
+                      <b>Fecha:</b>
+                      {{ element.informeFinalAnexo.fechaRadicado | date: 'dd/MM/yyyy' }}
+                    </span>
                     <!--Digital-->
-                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">{{ element.informeFinalAnexo.urlSoporte }}</span>
+                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">
+                      {{ element.informeFinalAnexo.urlSoporte }}
+                    </span>
                   </div>
                 </td>
               </ng-container>
-        
+
               <!-- verificacion Column -->
               <ng-container matColumnDef="validacionCodigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Verificación</th>
                 <td mat-cell *matCellDef="let element">
                   <section class="slect-table-contain mt-1em">
                     <mat-form-field class="select-width">
-                      <mat-label *ngIf="element.validacionCodigo != null">{{ element.validacionCodigoString }}</mat-label>
+                      <mat-label *ngIf="element.validacionCodigo != null">{{
+                        element.validacionCodigoString
+                      }}</mat-label>
                       <mat-select [(ngModel)]="element.validacionCodigo" (selectionChange)="select(element)" required>
                         <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                           {{ estado.name }}
@@ -95,7 +112,7 @@
                   </section>
                 </td>
               </ng-container>
-        
+
               <!-- Id Column -->
               <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestionar</th>
@@ -128,16 +145,20 @@
                     type="button"
                     (click)="openDialogObservaciones(element)"
                   >
-                    <span *ngIf="element.tieneObservacionSupervisor == null || element.tieneObservacionSupervisor == false">
+                    <span
+                      *ngIf="element.tieneObservacionSupervisor == null || element.tieneObservacionSupervisor == false"
+                    >
                       Observaciones
                     </span>
-                    <span *ngIf="element.tieneObservacionSupervisor != null && element.tieneObservacionSupervisor == true">
+                    <span
+                      *ngIf="element.tieneObservacionSupervisor != null && element.tieneObservacionSupervisor == true"
+                    >
                       Ver Observaciones
                     </span>
                   </button>
                 </td>
               </ng-container>
-        
+
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
@@ -150,14 +171,13 @@
             [pageSizeOptions]="[5, 10, 25, 100]"
           ></mat-paginator>
         </div>
-        
+
         <div class="text-center">
           <button mat-button color="warn" class="btn-guardar" (click)="onSubmit()">
             <img src="assets/img/icon/guardar.svg" alt="Guardar" />
           </button>
         </div>
       </section>
-      
     </mat-expansion-panel>
   </mat-accordion>
 </div>
