--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/detalle-balance-gbftrec/detalle-balance-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/detalle-balance-gbftrec/detalle-balance-gbftrec.component.html
@@ -50,5 +50,6 @@
                 </mat-card-content>
             </mat-card>
         </div>
+        <app-tabla-detalle-traslados-gbftrec></app-tabla-detalle-traslados-gbftrec>
     </div>
 </section>
