--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/fuentes-usos-gbftrec/fuentes-usos-gbftrec.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/fuentes-usos-gbftrec/fuentes-usos-gbftrec.component.scss
@@ -76,7 +76,9 @@ table td{
 .h-3em {
     height: 3em;
 }
-
+.h-6em {
+    height: 6em;
+}
 .size-table {
     display: inline-block;
     width: 90%;
