--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/fuentes-usos-gbftrec/fuentes-usos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/fuentes-usos-gbftrec/fuentes-usos-gbftrec.component.html
@@ -7,24 +7,7 @@
     <mat-card-content style="text-align: left;">
         <div class="table-responsive text-center">
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-                <!--
-                <ng-container matColumnDef="aportante">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
-                    <td mat-cell *matCellDef="let element"style="padding: 0 0em !important;">
-                        <div class="supportElement" *ngFor="let el of element.aportante ; let i = index">
-                            {{el.nombre}}
-                        </div>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="valorAportante">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
-                    <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                        <div class="supportElement" *ngFor="let el of element.valorAportante ; let i = index">
-                            {{el.valor}}
-                        </div>
-                    </td>
-                </ng-container>
-            -->
+
                 <ng-container matColumnDef="aportante">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
                     <td mat-cell *matCellDef="let element"> <b>{{element.aportante}}</b></td>
@@ -36,19 +19,24 @@
                 <ng-container matColumnDef="fuenteAportante">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuente </th>
                     <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                        <div class="sub-item-table flex-table justify-content-center align-items-center h-3em"
-                            *ngFor="let el of element.fuenteAportante ; let i = index" [attr.rowspan]="element.fuenteAportante.length">
-                            {{el.fuente}}
+                        <div class="sub-item-table justify-content-center align-items-center"
+                            *ngFor="let el of element.fuenteAportante ; let i = index">
+                            <div [ngClass]="{'h-3em': el.uso.length==1, 'h-6em': el.uso.length>1}"
+                                style="margin-top: 1em;">
+                                {{el.fuente}}
+                            </div>
                         </div>
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="uso">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Uso </th>
                     <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                        <div *ngFor="let el of element.fuenteAportante ; let i = index">
-                            <div class="sub-item-table justify-content-center align-items-center h-3em"
-                         *ngFor="let el2 of el.uso ; let j = index">
-                                {{el2.nombre}}
+                        <div class="sub-item-table justify-content-center align-items-center"
+                            *ngFor="let el of element.fuenteAportante ; let i = index">
+                            <div *ngFor="let el2 of el.uso ; let j = index">
+                                <div class="h-3em">
+                                    {{el2.nombre}}
+                                </div>
                             </div>
                         </div>
                     </td>
@@ -56,10 +44,12 @@
                 <ng-container matColumnDef="valorUso">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor uso </th>
                     <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                        <div *ngFor="let el of element.fuenteAportante ; let i = index">
-                            <div class="sub-item-table justify-content-center align-items-center h-3em"
-                                *ngFor="let el2 of el.valorUso ; let j = index">
-                                {{el2.valor}}
+                        <div class="sub-item-table justify-content-center align-items-center"
+                            *ngFor="let el of element.fuenteAportante ; let i = index">
+                            <div *ngFor="let el2 of el.valorUso ; let j = index">
+                                <div class="h-3em" >
+                                    {{el2.valor}}
+                                </div>
                             </div>
                         </div>
                     </td>
