Ajustes actas comité tecnico

--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/crear-acta/crear-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/crear-acta/crear-acta.component.html
@@ -59,6 +59,7 @@
                         [listaMiembros]="objetoComiteTecnico.sesionParticipante" 
                         (validar)="habilitar($event)"
                         [style.pointer-events]="getStyle()"
+                        [EstadosolicitudActa]="objetoComiteTecnico.estadoActaCodigo"
                         [fechaComite]="objetoComiteTecnico.fechaOrdenDia">
 
                     </app-form-solicitud>
