--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
@@ -151,6 +151,7 @@
         [sesionComiteSolicitud]="sesionComiteSolicitud"
         [style.display]="getMostrarProyectos()"
         [Estadosolicitud]="getObservableEstadoSolicitud()"
+        [EstadosolicitudActa]="EstadosolicitudActa"
         (ActualizarProyectos)="ActualizarProyectos($event)"
       >
       </app-tabla-form-solicitud-multiple>
