--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-registrar-validacion-solicitudes-contractiales/tabla-validacion-solicitudes-contractiales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-registrar-validacion-solicitudes-contractiales/tabla-validacion-solicitudes-contractiales.component.html
@@ -34,9 +34,12 @@
                         <mat-radio-button [value]="true"
                                           (change)="changeRequiere(true, element)"
                                           >Sí</mat-radio-button>
-                        <mat-radio-button [value]="false" 
-                                          (change)="changeRequiere(false, element)"
-                                          >No</mat-radio-button>
+                        <mat-radio-button
+                            [value]="false"
+                            (change)="changeRequiere(false, element)"
+                            [disabled]="element.tipoSolicitudCodigo === '2'"
+                            >
+                        No</mat-radio-button>
                     </mat-radio-group>
                     <span class="required-form-group">*</span>
                 </div>
