--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-gestion-actas/tabla-gestion-actas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-gestion-actas/tabla-gestion-actas.component.html
@@ -54,7 +54,7 @@
                     Ver detalle/Editar</a>
 
                 <a [routerLink]="['crearActa', element.id]" mat-raised-button
-                    *ngIf="element.registroCompleto && (element.estadoActa == 'Sin Acta')" color="accent"
+                    *ngIf="!element.registroCompleto && (element.estadoActa == 'Sin Acta') && element.estadoActaCodigo === '0'" color="accent"
                     class="btn-table">
                     Ver detalle/editar</a>
 
