--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
@@ -25,11 +25,24 @@
             <p><strong>Plazo: </strong>{{detailavailabilityBudget?.plazo}}</p>
             <p><strong>Objeto:</strong></p>
             <div><strong>1. </strong><div [innerHtml]="detailavailabilityBudget?.objeto"></div> </div>
-            <p *ngIf="esModificacion"><strong>Tipo de modificación: </strong>Adición y plazo</p>
-            <p *ngIf="esModificacion"><strong>Valor después de la modificación: </strong>$ 90.000.000</p>
-            <p *ngIf="esModificacion"><strong>Plazo después de la modificación: </strong>20 meses / 5 días</p>
-            <p *ngIf="esModificacion"><strong>Detalle de la modificación:</strong></p>
-            <p *ngIf="esModificacion">Se realiza adición de recursos para obras complementarias</p>
+            <p *ngIf="detailavailabilityBudget?.novedadContractual">
+                <strong>Tipo de modificación:</strong>
+                Adición
+            </p>
+            <p *ngIf="detailavailabilityBudget?.novedadContractual">
+                <strong>Valor después de la modificación:</strong>
+                {{detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].presupuestoAdicionalSolicitado | currency:'':'symbol':'3.0'}}
+            </p>
+            <p *ngIf="detailavailabilityBudget?.novedadContractual">
+                <strong>Plazo  de la modificación:</strong>
+                
+                {{detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].plazoAdicionalMeses}} meses /
+                {{detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].plazoAdicionalDias}} dias
+            </p>
+            <p *ngIf="detailavailabilityBudget?.novedadContractual">
+                <strong>Detalle de la modificación:</strong>
+                {{detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].resumenJustificacion}}
+            </p>
 
             <div  *ngIf="detailavailabilityBudget?.aportantes.length>0">
                 <h2 class="card-subTitle">Aportantes</h2>
